# seo-skills

./: AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
agents/: seo-cluster.md  seo-content.md  seo-technical.md  seo-wordpress.md
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  MCP-INTEGRATION.md  TROUBLESHOOTING.md
extensions/banana/: README.md  install.sh
extensions/banana/skills/seo-image-gen/: SKILL.md
extensions/dataforseo/: README.md  install.ps1  install.sh
extensions/dataforseo/skills/seo-dataforseo/: SKILL.md
extensions/firecrawl/: README.md  install.ps1  install.sh
extensions/firecrawl/skills/seo-firecrawl/: SKILL.md
schema/: templates.json
scripts/: georeadiness_analyzer.py  llms_txt_generator.py  wordpress_api.py  wp_content_analyzer.py
skills/seo/: SKILL.md
skills/seo-audit/: LICENSE.txt  SKILL.md
skills/seo-brand-voice/: SKILL.md
skills/seo-cluster/: SKILL.md
skills/seo-content/: SKILL.md
skills/seo-geo/: SKILL.md
skills/seo-images/: SKILL.md
skills/seo-outline-article/: SKILL.md
skills/seo-page/: SKILL.md
skills/seo-schema/: SKILL.md
skills/seo-technical/: SKILL.md
skills/seo-wordpress/: SKILL.md
skills/seo-wordpress-publish/: SKILL.md
skills/seo-wordpress/references/: wp-seo-checklist.md
skills/seo-wp-strategy/: SKILL.md
skills/seo-write-article/: SKILL.md
